LU-5416 ofd: improve error handling in ofd_precreate_objects()

In ofd_precreate_objects() fix two invalid assertions triggered by
errors in the first iterations of the declare loop and the create
loop.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I8bee1528dc58d5b8b35ac89056c667370cc347c5
Reviewed-on: http://review.whamcloud.com/11370
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>