lustre/ofd/ofd_objects.c
@@ -305,7 +305,10 @@ int ofd_precreate_objects(const struct lu_env *env, struct ofd_device *ofd,
 
 		rc = dt_declare_create(env, next, &info->fti_attr, NULL,
 				       &info->fti_dof, th);
-		if (rc) {
+		if (rc < 0) {
+			if (i == 0)
+				GOTO(trans_stop, rc);
+
 			nr = i;
 			break;
 		}
@@ -317,8 +320,6 @@ int ofd_precreate_objects(const struct lu_env *env, struct ofd_device *ofd,
 
 	CDEBUG(D_OTHER, "%s: create new object "DFID" nr %d\n",
 	       ofd_name(ofd), PFID(fid), nr);
-
-	LASSERT(nr > 0);
 
 	 /* When the LFSCK scanning the whole device to verify the LAST_ID file
 	  * consistency, it will load the last_id into RAM firstly, and compare
@@ -362,8 +363,13 @@ int ofd_precreate_objects(const struct lu_env *env, struct ofd_device *ofd,
 
 			rc = dt_create(env, next, &info->fti_attr, NULL,
 				       &info->fti_dof, th);
-			if (rc)
+			if (rc < 0) {
+				if (i == 0)
+					GOTO(trans_stop, rc);
+
+				rc = 0;
 				break;
+			}
 			LASSERT(ofd_object_exists(fo));
 		}
 		ofd_seq_last_oid_set(oseq, id + i);
